fail_crate/tests/default_and_optional.stderr
error: Parameterless `default` is not needed when `optional` is present. Remove `default`.
 --> fail_crate/tests/default_and_optional.rs:5:5
  |
5 | /     #[new(default, optional)]
6 | |     x: u32,
  | |__________^
