fail_crate/tests/default_and_optional.rs
use inew::New;

#[derive(New)]
struct A {
    #[new(default, optional)]
    x: u32,
}

fn main() {}
